Added css file, colors and general styling.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Voice Recognition</title>
 </head>
 <body>
+    <header>
+        <h1>Voice Recognition</h1>
     <button class = "talk">Talk</button>
-    <h3 class = "content"></h3>
-    
+    </header>
+    <div id = "messageLog">
+        <h3 class = "content"></h3>
+    </div>
+
     <script src="App.js"></script>
 </body>
 </html>
